  * Rewrote the "Hardware Compatibility" section.
  * Amended the "Network Settings" section.
  * Rewrote the "Pre-Partitioning for Multi-Boot Systems" section 
    to bring it up to date with the current d-i features and make it
    easier to read for beginners.
  * Rewrote the "Pre-Installation Hardware and Operating System Setup"
    section to bring it up to date for modern hardware.
  
 -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200

installation-guide (20120826) unstable; urgency=low

  [ Samuel Thibault ]
  * Reference the French translation of the brltty manual in fr.
  * Disable G-I on kfreebsd-*.
  * Document booting d-i from grub2. Closes: #612165.
  * Mention preseeding as an alternative for accessibility.
  * Document that the text installer is selected by default.
  * Avoid referencing BRLTTY manual chapter precise numbers. Closes: #580508.
  * Make it clear that it's the ISO file which needs to be copied to the USB
    key.
  * Update powerpc's copy of documentation for copying ISO file on USB keys.
  * Add software speech synthesis documentation.
  * Document SCSI partition raise to 255. Closes: Bug#644734. Thanks David
    Prévot.
  * Do not make users think that only "Graphical install" has speakup support,
    and not "64 bit graphical install" too.
  * Mention the 64bit variant installation options.
  * Update chroot manual into using grub2.
  * Document that installing makedev is needed to get MAKEDEV.
    Closes: #620881, #656939.
  * Document the availability of other apt sources, thanks Karl for the
    patch. Closes: Bug#608828.
  * Update xorg, brltty and speakup versions.
  * WPA/WPA2 is now available. Closes: #659648.
  * Use dd of= instead of cat >, to save users who use sudo. Advise to make
    sure the stick is unmounted. Closes: #660776.
  * Rename kbd-chooser component to console-setup.
  * Fix preseeding for keyboard-configuration.
  * Simply use cp instead of dd to prepare USB stick.