@@ -2,28 +2,37 @@
 <!-- $Id$ -->
 
  <sect1 id="official-cdrom">
- <title>Official &debian-gnu; CD-ROM Sets</title>
+ <title>Official &debian-gnu; CD/DVD-ROM Sets</title>
 <para>
 
 By far the easiest way to install &debian-gnu; is from an Official
-&debian; CD-ROM Set. You can buy a set from a vendor (see the
+&debian; CD/DVD-ROM Set. You can buy a set from a vendor (see the
 <ulink url="&url-debian-cd-vendors;">CD vendors page</ulink>).
-You may also download the CD-ROM images from a &debian; mirror and make
-your own set, if you have a fast network connection and a CD burner
+You may also download the CD/DVD-ROM images from a &debian; mirror and make
+your own set, if you have a fast network connection and a CD/DVD burner
 (see the <ulink url="&url-debian-cd;">Debian CD page</ulink> and
 <ulink url="&url-debian-cd-faq;">Debian CD FAQ</ulink> for
-detailed instructions). If you have a &debian; CD set and CDs are
-bootable on your machine, you can skip right to
-<xref linkend="boot-installer"/>; much effort has been expended to ensure
-the files most people need are there on the CD. Although a full set of
-binary packages requires several CDs, it is unlikely you will need
-packages on the third CD and above. You may also consider using the
-DVD version, which saves a lot of space on your shelf and you avoid
-the CD shuffling marathon.
+detailed instructions). If you have a &debian; CD/DVD set and CDs/DVDs are
+bootable on your machine <phrase arch="x86">, which is the case on all
+modern PCs</phrase>, you can skip right to
+<xref linkend="boot-installer"/>. Much effort has been expended to ensure
+the most-used files are on the first CDs and DVDs, so that a basic 
+desktop installation can be done with only the first DVD or - to a limited
+extent - even with only the first CD.
 
 </para><para>
 
-If your machine doesn't support CD booting, but you do have a CD set,
+As CDs have a rather limited capacity by today's standards, not all
+graphical desktop environments are installable with only the first CD; only
+XFCE (which is the default desktop environment installed by &debian-gnu;
+&release;) completely fits on the first CD.  For all other desktop
+environments a CD installation requires either network connectivity during
+the installation to download the remaining files or additional CDs.
+
+</para><para>
+
+If your machine doesn't support CD booting <phrase arch="x86">(only relevant
+on very old PC systems)</phrase>, but you do have a CD set,
 you can use an alternative strategy such as
 
 <phrase condition="supports-floppy-boot">floppy disk,</phrase>
