@@ -25,7 +25,9 @@ installation-guide (20120827) UNRELEASED; urgency=low
     easier to read for beginners.
   * Rewrote the "Pre-Installation Hardware and Operating System Setup"
     section to bring it up to date for modern hardware.
-  
+  * Amended the "Official Debian GNU/Linux CD/DVD-ROM Sets" section
+    (CD1 without network mirror too small for a full GNOME/KDE install).
+ 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
 installation-guide (20120826) unstable; urgency=low
